--- a/src/View/home.html.twig
+++ b/src/View/home.html.twig
@@ -1,4 +1,17 @@
-<!doctype html>
+{% extends 'layout.html.twig' %}
+
+{% block title %}
+    {{ parent() }} - Accueil
+{% endblock %}
+
+{% block content %}
+        {% include '_nav.html.twig' %}
+        <h1>Hello {{ name }} !</h1>
+{% endblock %}
+
+
+
+{# <!doctype html>
 <html lang="fr">
 <head>
     <meta charset="utf-8">
@@ -11,4 +24,4 @@
 <body>
     <h1>Hello {{ name }} !</h1>
 </body>
-</html>
+</html> #}
