--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+    {% include '_nav.html.twig' %}
     {% block content %}{% endblock %}
+    {% include '_footer.html.twig' %}
 </body>
 </html>
